Fixed jumping collapse

--- a/workshops/static/workshops/style.css
+++ b/workshops/static/workshops/style.css
@@ -15,3 +15,7 @@
 .clickable {
     cursor: pointer;
 }
+
+#workshopofferer-table {
+    margin-bottom: auto;
+}
